fixed menu spacing

--- a/lesson-11/stormcenter/css/large.css
+++ b/lesson-11/stormcenter/css/large.css
@@ -37,6 +37,7 @@
     a {
         background-color: lightblue;
         text-decoration: none;
+        margin-top: -1.5em;
     }
 
     a:hover {
